--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "build:watch": "tsc --watch",
     "dev": "vite",
-    "dev:electron": "concurrently \"vite\" \"electron .\"",
+    "dev:electron": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
     "type-check": "tsc --noEmit"
   },
   "keywords": [
@@ -33,7 +33,8 @@
     "electron": "^28.1.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
-    "vite-plugin-electron": "^0.15.5"
+    "vite-plugin-electron": "^0.15.5",
+    "wait-on": "^8.0.3"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
