Add mirror button with canvas streaming functionality - Add CanvasStreamManager utility for external window streaming - Add prominent mirror button in app header - Add animated test canvas for fallback streaming - Improve canvas detection with multiple selectors - Add enhanced styling for mirror button and app header - Fix LayerManager positioning to not cover header

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "build:watch": "tsc --watch",
     "dev": "vite",
-    "dev:electron": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
+    "dev:electron": "concurrently \"vite\" \"wait-on tcp:localhost:5173 tcp:localhost:5174 tcp:localhost:5175 && electron .\"",
     "type-check": "tsc --noEmit"
   },
   "keywords": [
