--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18.2.0",
     "three": "^0.159.0",
     "uuid": "^11.1.0",
+    "wavesurfer.js": "^7.10.1",
     "webmidi": "^3.1.8",
     "zustand": "^4.4.7"
   }
