--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/p5": "^1.7.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/react-slider": "^1.3.6",
     "@types/three": "^0.159.0",
     "@types/webmidi": "^2.0.10",
     "@vitejs/plugin-react": "^4.2.1",
@@ -39,12 +40,14 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@types/uuid": "^10.0.0",
     "chokidar": "^3.5.3",
     "p5": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-slider": "^2.0.6",
     "three": "^0.159.0",
     "uuid": "^11.1.0",
     "wavesurfer.js": "^7.10.1",
