--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build:electron": "tsc -p tsconfig.electron.json",
     "dev": "vite",
     "dev:web": "vite --config vite.web.config.ts",
+    "build:web": "vite build --config vite.web.config.ts",
+    "vercel-build": "vite build --config vite.web.config.ts",
     "dev:electron": "npm run build:electron && concurrently \"vite\" \"wait-on tcp:localhost:5173 tcp:localhost:5174 tcp:localhost:5175 && electron .\"",
     "type-check": "tsc --noEmit"
   },
