--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
@@ -21,5 +21,8 @@
     }
   },
   "include": ["src"],
+  "exclude": [
+    "src/effects/templates/**"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 } 
