web auth: add Supabase Auth gate, forgot-password flow, sign out button (web only); add cloud upload panel; wire web-only auth wrapper; ignore .env.local

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@supabase/supabase-js": "^2.55.0",
     "@types/uuid": "^10.0.0",
     "chokidar": "^3.5.3",
     "class-variance-authority": "^0.7.1",
