--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "wait-on": "^8.0.3"
   },
   "dependencies": {
+    "mp4box": "^0.5.4",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@radix-ui/react-checkbox": "^1.3.3",
