Update effects and components with fiber rendering improvements and optimizations

--- a/tsconfig.electron.json
+++ b/tsconfig.electron.json
@@ -10,6 +10,7 @@
     "strict": true,
     "outDir": "dist-electron",
     "rootDir": "electron",
+    "allowJs": true,
     "declaration": false,
     "sourceMap": false
   },
