--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "electron": "^28.1.0",
+    "patch-package": "^8.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3",
@@ -46,7 +47,6 @@
     "wait-on": "^8.0.3"
   },
   "dependencies": {
-    "mp4box": "^0.5.4",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -68,11 +68,16 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@supabase/supabase-js": "^2.55.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-cpu": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "@types/uuid": "^10.0.0",
     "chokidar": "^3.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
+    "ml5": "^1.0.1",
+    "mp4box": "^0.5.4",
     "p5": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
