Update timeline components, layer management, and add new timeline test components

--- a/package.json
+++ b/package.json
@@ -71,16 +71,20 @@
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-cpu": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@types/lodash": "^4.17.20",
     "@types/uuid": "^10.0.0",
     "chokidar": "^3.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "ml5": "^1.0.1",
+    "moveable": "^0.53.0",
     "mp4box": "^0.5.4",
     "p5": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moveable": "^0.56.0",
     "react-slider": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "three": "^0.159.0",
