--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "electron": "^28.1.0",
+    "electron-builder": "^26.0.12",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
@@ -71,11 +72,15 @@
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-cpu": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/lodash": "^4.17.20",
     "@types/uuid": "^10.0.0",
     "chokidar": "^3.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "ml5": "^1.0.1",
