--- a/package.json
+++ b/package.json
@@ -26,29 +26,31 @@
   "license": "ISC",
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
-    "@types/node": "^20.10.5",
+    "@types/node": "^24.3.2",
     "@types/p5": "^1.7.6",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9",
     "@types/react-slider": "^1.3.6",
-    "@types/three": "^0.159.0",
+    "@types/three": "^0.180.0",
     "@types/webmidi": "^2.0.10",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^5.0.2",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "electron": "^38.0.0",
     "electron-builder": "^26.0.12",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vite-plugin-electron": "^0.15.5",
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.5",
+    "vite-plugin-electron": "^0.29.0",
     "wait-on": "^8.0.3"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/accessibility": "^3.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -65,8 +67,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@supabase/supabase-js": "^2.55.0",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-cpu": "^4.22.0",
@@ -86,15 +88,15 @@
     "moveable": "^0.53.0",
     "mp4box": "^0.5.4",
     "p5": "^1.11.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-moveable": "^0.56.0",
     "react-slider": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.159.0",
+    "three": "^0.180.0",
     "uuid": "^11.1.0",
     "wavesurfer.js": "^7.10.1",
     "webmidi": "^3.1.8",
-    "zustand": "^4.4.7"
+    "zustand": "^5.0.8"
   }
 }
