--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "license": "ISC",
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^24.3.2",
     "@types/p5": "^1.7.6",
     "@types/react": "19.1.13",
     "@types/react-dom": "19.1.9",
-    "@types/react-slider": "^1.3.6",
     "@types/three": "^0.180.0",
     "@types/webmidi": "^2.0.10",
     "@vitejs/plugin-react": "^5.0.2",
@@ -91,7 +91,6 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-moveable": "^0.56.0",
-    "react-slider": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
     "uuid": "^11.1.0",
