Fix automatic audio inclusion in MP4 exports - Remove manual audio dialog and improve audio capture compatibility

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "p5vj",
+  "name": "sonomika",
   "version": "1.0.0",
   "description": "A VJ application built with Electron and p5.js",
   "main": "out/electron/main.js",
