--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:web": "vite --config vite.web.config.ts",
     "build:web": "vite build --config vite.web.config.ts",
     "vercel-build": "vite build --config vite.web.config.ts",
-    "dev:electron": "npm run build:electron && concurrently -k -s first \"vite --force\" \"wait-on tcp:localhost:5173 tcp:localhost:5174 tcp:localhost:5175 && electron .\"",
+    "dev:electron": "npm run build:electron && concurrently -k -s first \"vite --force\" \"wait-on tcp:localhost:5173 && electron .\"",
     "type-check": "tsc --noEmit"
   },
   "keywords": [
