--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "tsc -p tsconfig.electron.json && tsc && vite build",
     "build:watch": "tsc --watch",
     "build:electron": "tsc -p tsconfig.electron.json",
+    "build:installer": "npm run build && electron-builder",
+    "build:installer:win": "npm run build && electron-builder --win",
+    "build:installer:win:portable": "npm run build && electron-builder --win portable",
     "dev": "vite",
     "dev:web": "vite --config vite.web.config.ts",
     "build:web": "vite build --config vite.web.config.ts",
@@ -69,9 +72,6 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@supabase/supabase-js": "^2.55.0",
-    "@tensorflow/tfjs": "^4.22.0",
-    "@tensorflow/tfjs-backend-cpu": "^4.22.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/lodash": "^4.17.20",
     "@types/uuid": "^10.0.0",
@@ -83,7 +83,6 @@
     "fluent-ffmpeg": "^2.1.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
-    "ml5": "^1.0.1",
     "moveable": "^0.53.0",
     "mp4box": "^0.5.4",
     "p5": "^1.11.9",
@@ -100,9 +99,34 @@
   "build": {
     "appId": "com.sonomika.app",
     "productName": "Sonomika",
+    "copyright": "Copyright © 2024",
     "directories": {
-      "buildResources": "public/icons"
+      "buildResources": "public/icons",
+      "output": "release"
     },
+    "files": [
+      "out/**/*",
+      "dist/**/*",
+      "package.json",
+      "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
+      "!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
+      "!**/node_modules/*.d.ts",
+      "!**/node_modules/.bin",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+      "!.editorconfig",
+      "!**/._*",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,.gitignore,.gitattributes}",
+      "!**/{__pycache__,thumbs.db,.flowconfig,.idea,.vs,.nyc_output}",
+      "!**/{appveyor.yml,.travis.yml,circle.yml}",
+      "!**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}",
+      "!dist/fonts/**/*",
+      "!dist/**/fonts/**/*"
+    ],
+    "asar": true,
+    "asarUnpack": [
+      "**/ffmpeg-static/**/*",
+      "**/ffprobe-static/**/*"
+    ],
     "extraResources": [
       {
         "from": "public/icons",
@@ -112,12 +136,51 @@
         ]
       }
     ],
+    "compression": "maximum",
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "portable",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "icon": "public/icons/sonomika_icon_2.png",
+      "artifactName": "${productName}-${version}-${arch}.${ext}",
+      "signAndEditExecutable": false,
+      "verifyUpdateCodeSignature": false
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Sonomika",
+      "deleteAppDataOnUninstall": false,
+      "license": "LICENSE.txt",
+      "warningsAsErrors": false
+    },
+    "portable": {
+      "artifactName": "${productName}-${version}-portable-${arch}.${ext}"
+    },
     "linux": {
       "icon": "public/icons/sonomika_icon_2.png",
-      "category": "AudioVideo"
+      "category": "AudioVideo",
+      "target": [
+        "AppImage",
+        "deb"
+      ]
     },
-    "win": {
-      "icon": "public/icons/sonomika_icon_2.ico"
+    "mac": {
+      "icon": "public/icons/sonomika_icon_2.png",
+      "category": "public.app-category.audio"
     }
   }
 }
