--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -p tsconfig.electron.json && tsc && vite build",
     "build:watch": "tsc --watch",
     "build:electron": "tsc -p tsconfig.electron.json",
-    "build:installer": "npm run build && electron-builder",
+    "build:installer": "npm run build && node scripts/embed-icon.js && electron-builder",
     "build:installer:win": "npm run build && electron-builder --win",
     "build:installer:win:portable": "npm run build && electron-builder --win portable",
     "dev": "vite",
@@ -42,6 +42,7 @@
     "electron-builder": "^26.0.12",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.41",
+    "rcedit": "^5.0.2",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.9.2",
     "vite": "^7.1.5",
@@ -96,9 +97,10 @@
     "appId": "com.sonomika.app",
     "productName": "Sonomika",
     "copyright": "Copyright © 2024",
+    "afterPack": "scripts/afterPack.js",
     "directories": {
-      "buildResources": "public/icons",
-      "output": "release"
+      "output": "release",
+      "buildResources": "build"
     },
     "files": [
       "out/**/*",
@@ -178,7 +180,8 @@
           ]
         }
       ],
-      "icon": "public/icons/sonomika_icon_2.png",
+      "icon": "icon.ico",
+      "requestedExecutionLevel": "asInvoker",
       "artifactName": "${productName}-${version}-${arch}.${ext}",
       "signAndEditExecutable": false,
       "verifyUpdateCodeSignature": false
