Add .github and docs to .gitignore, remove broken screenshot references from README

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ dist-electron/
 tsconfig.node.tsbuildinfo
 bundled/sets/debug-test-preset.vjpreset
 deploy/app-files/user-documents/sets/debug-test-preset.vjpreset
+
+# Documentation and workflows
+.github/
+docs/
