Remove LICENSE.rtf - keep only LICENSE.txt for GitHub compatibility

--- a/package.json
+++ b/package.json
@@ -11,11 +11,6 @@
     "build:installer": "npm run build && node scripts/embed-icon.js && electron-builder",
     "build:installer:win": "npm run build && electron-builder --win",
     "build:installer:win:portable": "npm run build && electron-builder --win portable",
-    "build:installer:mac": "npm run build && electron-builder --mac",
-    "build:installer:mac:dmg": "npm run build && electron-builder --mac dmg",
-    "build:installer:mac:zip": "npm run build && electron-builder --mac zip",
-    "build:installer:mac:standalone": "npm run build && electron-builder --mac zip",
-    "build:installer:mac:dir": "npm run build && electron-builder --mac dir",
     "dev": "vite",
     "dev:web": "vite --config vite.web.config.ts",
     "build:web": "vite build --config vite.web.config.ts",
@@ -181,8 +176,11 @@
       "icon": "icon.ico",
       "requestedExecutionLevel": "asInvoker",
       "artifactName": "${productName}-${version}-${arch}.${ext}",
-      "signAndEditExecutable": false,
-      "verifyUpdateCodeSignature": false
+      "signAndEditExecutable": true,
+      "verifyUpdateCodeSignature": true,
+      "signingHashAlgorithms": ["sha256"],
+      "certificateFile": "${env.CSC_LINK}",
+      "certificatePassword": "${env.CSC_KEY_PASSWORD}"
     },
     "nsis": {
       "oneClick": false,
@@ -205,52 +203,6 @@
         "AppImage",
         "deb"
       ]
-    },
-    "mac": {
-      "icon": "public/icons/sonomika_icon_2.png",
-      "category": "public.app-category.audio",
-      "target": [
-        {
-          "target": "dmg",
-          "arch": [
-            "x64",
-            "arm64"
-          ]
-        },
-        {
-          "target": "zip",
-          "arch": [
-            "x64",
-            "arm64"
-          ]
-        }
-      ],
-      "artifactName": "${productName}-${version}-${arch}.${ext}",
-      "hardenedRuntime": true,
-      "gatekeeperAssess": true,
-      "entitlements": "build/entitlements.mac.plist",
-      "entitlementsInherit": "build/entitlements.mac.plist"
-    },
-    "dmg": {
-      "title": "${productName} ${version}",
-      "icon": "public/icons/sonomika_icon_2.png",
-      "background": null,
-      "contents": [
-        {
-          "x": 130,
-          "y": 220
-        },
-        {
-          "x": 410,
-          "y": 220,
-          "type": "link",
-          "path": "/Applications"
-        }
-      ],
-      "window": {
-        "width": 540,
-        "height": 400
-      }
     }
   }
 }
