--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "chokidar": "^3.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "moveable": "^0.53.0",
